meetup Nantes rmd first

--- a/2019-11-06_rmd_first_method/userproject/01-analyse-squirrels.Rmd
+++ b/2019-11-06_rmd_first_method/userproject/01-analyse-squirrels.Rmd
@@ -6,7 +6,10 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+  echo = TRUE,
+  message = FALSE
+)
 ```
 
 ## List all packages needed
