--- a/2019-11-06_rmd_first_method/userproject/03-analyse-squirrels-roxygen.Rmd
+++ b/2019-11-06_rmd_first_method/userproject/03-analyse-squirrels-roxygen.Rmd
@@ -6,8 +6,14 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+  echo = TRUE,
+  message = FALSE
+)
 ```
+
+> **Create a small reproducible example**  
+> **Document your functions**  
 
 ## List all packages needed
 
