--- a/2019-11-06_rmd_first_method/userproject/04-analyse-squirrels-tests.Rmd
+++ b/2019-11-06_rmd_first_method/userproject/04-analyse-squirrels-tests.Rmd
@@ -6,8 +6,13 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(
+  echo = TRUE,
+  message = FALSE
+)
 ```
+
+> **Add unit tests to your functions**
 
 ## List all packages needed
 
